--- a/src/locale/locales/zh-TW/messages.po
+++ b/src/locale/locales/zh-TW/messages.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2024-05-11 20:49+0800\n"
+"POT-Creation-Date: 2024-05-11 20:52+0800\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1108,7 +1108,7 @@ msgstr "無法載入列表"
 
 #: src/components/dms/NewChat.tsx:241
 msgid "Could not load profiles. Please try again later."
-msgstr "無法載入設定檔。請稍後再試。"
+msgstr "無法載入用戶個人檔案。請稍後再試。"
 
 #: src/components/dms/ConvoMenu.tsx:71
 msgid "Could not mute chat"
